started adding documentation for dropdowns.

--- a/22_bt_chocolate-milk_lauE-xiedengD/index.html
+++ b/22_bt_chocolate-milk_lauE-xiedengD/index.html
@@ -330,7 +330,10 @@ K22 -- Who Does Frame Work For?
             The list elements are given the nav-item class, and the links are nav-links.
             <br>
             Lists can also be entirely ignored with class tags "nav-item nav-link" for the links, and navbar-nav the main < div >.
+            Dropdowns are slightly stricter with the structure.
             
+            labeled by class="dropdown-menu" and verbatim , 
+            with each element labelled by dropdown-item.
     </div>
     
 
