--- a/20_css/0_inline/index.html
+++ b/20_css/0_inline/index.html
@@ -5,7 +5,8 @@
        K20 -- CSS basics
        2019-11-01
 
-	 WORK FILE for CSS 	
+    WORK FILE for CSS
+    Inline styling
     -->
 
   <head>
