--- a/28_jsdom/open_me.html
+++ b/28_jsdom/open_me.html
@@ -14,6 +14,8 @@
     
     <div>Buttons to Run Functions</div>
     <button id="fact">Factorial</button>
+    <button id="fib">Fibonacci</button>
+    <button id="gcd">GCD</button>
     
     <div id="answer"></div>
     <script src="funky_town.js"></script>
