added drawCircle funct; added toggle function

--- a/04_canvas/clickdraw.html
+++ b/04_canvas/clickdraw.html
@@ -10,6 +10,7 @@
 			</canvas>
 		</center>
 		<center>
+      <button id="toggle">Rectangle</button>
 			<button id="clear">Clear Drawing</button>
 		</center>
 		<script src="clickdraw.js"></script>
