--- a/classwork/03-26/svg.html
+++ b/classwork/03-26/svg.html
@@ -6,7 +6,7 @@
     </title>
   </head>
   <body>
-    <svg height= "500"
+    <svg id="vimage" height= "500" 
       width="500" style="border:1px solid;">
       <circle cx="250" cy="250" r="75" fill="yellow" stroke="solid"/>
       <rect x="0" y="0" width="100" height="100" fill="blue"/>
