added xtra functionality added xtra button on index.html added code in animate for xtra

--- a/14_svg/index.html
+++ b/14_svg/index.html
@@ -20,6 +20,7 @@
 		<div>
 		  <button id="clear">Clear</button>
 			<button id="moveButton">Move</button>
+			<button id="xtraButton">xtra</button>
 		</div>
 </center>
 </body>
