--- a/16_d3/01/index.html
+++ b/16_d3/01/index.html
@@ -8,7 +8,7 @@
 <!--
 Clyde "Thluffy" Sinclair
 SoftDev2 pd0
-2099-12-31    
+2099-12-31
 -->
 
 <style>
@@ -29,24 +29,31 @@ SoftDev2 pd0
 	charset="utf-8"></script>
 
 <!--------------------------------
-    Entering the following commands via console will 
+    Entering the following commands via console will
     incrementally re-create your hardcoded chart...
 
     //Init your data:
+    // Just makes array
     var data = [4, 8, 15, 16, 23, 42];
 
     //Select your chart.
+    //creates object chart, which is an array containing chart tags
+    // parent is html
     var chart = d3.select(".chart");
 
     //Prepare for data join.
+    // creates empty array of div
+    // child of chart
     var bar = chart.selectAll("div");
 
     (this defines selection to which you will join data)
 
     //Join your data.
+    //adds infor to elements of bar
     var barUpdate = bar.data(data);
 
     //Instantiate new elements by appending to the “enter selection.”
+    // creates div tags from inputted information
     var barEnter = barUpdate.enter().append("div");
 
     //Set width of each bar proportional to its data value.
@@ -56,4 +63,3 @@ SoftDev2 pd0
     //Label each bar.
     barEnter.text(function(d) { return d; });
   -------------------------------->
-  
