--- a/17_d3/d3_n00b.html
+++ b/17_d3/d3_n00b.html
@@ -12,13 +12,8 @@
     (steelblue bars, white number overlays)
     ...but will yield only blank page at first.
   -->
-<!--
-Clyde "Thluffy" Sinclair
-SoftDev2 pd0
-2099-12-31
--->
 
-<!--
+
 <style>
   .chart div {
   font: 10px sans-serif;
@@ -29,16 +24,16 @@ SoftDev2 pd0
   color: white;
   }
 </style>
--->
 
-<div id="chart">
+
+<div class="chart">
 </div>
 
 <script src="http://d3js.org/d3.v5.min.js"
 	charset="utf-8">
 </script>
 
-<script src="barchart.js"></script>
+<!-- extra script tag removed -->
 
 <!--------------------------------
     Entering the following commands via console will
@@ -47,10 +42,15 @@ SoftDev2 pd0
     var data = [4, 8, 15, 16, 23, 42];
 
     //Select your chart.
+		// id selector
+		// issue found: chart made from class not id
     var chart = d3.select(".chart");
 
     //Prepare for data join.
+		// issue found: somehow failing to create bar
+		// issue solved see var chart
     var bar = chart.selectAll("div");
+
     (this defines selection to which you will join data)
 
     //Join your data.
